# ffmpegcpp

./: README.md
adapter/: .gitignore  CMakeLists.txt  main.cpp
